@@ -33,7 +33,7 @@ plugins {
 rootProject.version = FacileJDBC.VERSION
 
 tasks.named<Wrapper>("wrapper") {
-	version = "6.5"
+	version = "6.7.1"
 	distributionType = Wrapper.DistributionType.ALL
 }
 
@@ -68,12 +68,13 @@ gradle.projectsEvaluated {
 
 		tasks.withType<JavaCompile> {
 			options.compilerArgs.add("-Xlint:" + xlint())
+			options.compilerArgs.add("--enable-preview")
 		}
 
 		plugins.withType<JavaPlugin> {
 			configure<JavaPluginConvention> {
-				sourceCompatibility = JavaVersion.VERSION_11
-				targetCompatibility = JavaVersion.VERSION_11
+				sourceCompatibility = JavaVersion.VERSION_15
+				targetCompatibility = JavaVersion.VERSION_15
 			}
 
 			setupJava(project)
@@ -129,7 +130,7 @@ fun setupTestReporting(project: Project) {
 	project.apply(plugin = "jacoco")
 
 	project.configure<JacocoPluginExtension> {
-		toolVersion = "0.8.5"
+		toolVersion = "0.8.6"
 	}
 
 	project.tasks {
@@ -145,6 +146,7 @@ fun setupTestReporting(project: Project) {
 
 		named<Test>("test") {
 			useTestNG()
+			jvmArgs("--enable-preview")
 			finalizedBy("jacocoTestReport")
 		}
 	}
@@ -156,6 +158,9 @@ fun setupTestReporting(project: Project) {
 fun setupJavadoc(project: Project) {
 	project.tasks.withType<Javadoc> {
 		val doclet = options as StandardJavadocDocletOptions
+		doclet.addBooleanOption("-enable-preview", true)
+		doclet.addStringOption("-release", "15")
+		doclet.addBooleanOption("Xdoclint:accessibility,html,reference,syntax", true)
 
 		exclude("**/internal/**")
 
@@ -165,7 +170,7 @@ fun setupJavadoc(project: Project) {
 		doclet.charSet = "UTF-8"
 		doclet.linkSource(true)
 		doclet.linksOffline(
-			"https://docs.oracle.com/en/java/javase/11/docs/api",
+			"https://docs.oracle.com/en/java/javase/15/docs/api",
 			"${project.rootDir}/buildSrc/resources/javadoc/java.se"
 		)
 		doclet.windowTitle = "FacileJDBC ${project.version}"
